maintain directory structure

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -113,7 +113,7 @@ nav ul li {
 }
 
 #man {
-  background-image: url("./img/Untitled-1.png");
+  background-image: url("../assets/img/Untitled-1.png");
   background-repeat: no-repeat;
   background-position: 65% 10%;
   background-size: 90vh;
