--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,6 +3,10 @@ fieldset {
   border: 2px solid black;
 }
 
+#field {
+  border: 2px solid black;
+}
+
 h2 {
   text-align: center;
   font: 400 50px/1.3 "Lobster Two", Helvetica, sans-serif;
