--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 nav {
@@ -99,6 +99,7 @@ nav ul li {
   height: 90vh;
   bottom: 0%;
   left: 0%;
+  overflow: hidden;
 }
 
 #rightcircle {
