--- a/src/styles/Work.scss
+++ b/src/styles/Work.scss
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
 @import url("https://fonts.googleapis.com/css?family=Be+Vietnam+Pro&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -66,11 +67,13 @@ img {
   border-radius: 10px;
 }
 
-.card-description {
+@mixin clamper($lines-to-clamp) {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: $lines-to-clamp;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
-/*# sourceMappingURL=Work.css.map */
+.card-description {
+  @include clamper(3);
+}
