--- a/src/pages/homepage/Home.scss
+++ b/src/pages/homepage/Home.scss
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  overflow: hidden;
-}
-
 nav {
   display: flex;
   height: 10vh;
@@ -52,7 +48,6 @@ nav ul li {
 .intro {
   height: 90vh;
   position: absolute;
-  overflow: hidden;
 }
 
 #info {
@@ -100,6 +95,7 @@ nav ul li {
   height: 90vh;
   bottom: 0%;
   left: 0%;
+  overflow: hidden;
 }
 
 #rightcircle {
@@ -114,7 +110,7 @@ nav ul li {
 }
 
 #man {
-  background-image: url("../assets/img/man.png");
+  background-image: url("../../assets/img/man.png");
   background-repeat: no-repeat;
   background-position: 65% 10%;
   background-size: 90vh;
