--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -13,6 +13,7 @@ h2 {
   font: 400 50px/1.3 "Lobster Two", Helvetica, sans-serif;
   color: black;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
+  margin-bottom: 25px;
 }
 
 h3 {
@@ -54,8 +55,8 @@ h3 {
 
 .inp {
   border-radius: 7px;
-  height: 25px;
-  width: 172px;
+  height: 30px;
+  width: 210px;
 }
 
 .inp:hover,
@@ -77,11 +78,17 @@ h3 {
   width: 200px;
 }
 
+::placeholder {
+  font-family: "Times New Roman", Times, serif;
+  font-size: large;
+}
+
 .leg1 {
   margin-left: 40px;
   color: black;
   font: 400 50px/1.3 "Lobster Two", Helvetica, sans-serif;
   font-size: 30px;
+  margin-top: 10px;
 }
 
 .sub {
