--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -24,10 +24,34 @@ h3 {
 }
 
 .center {
+  /* border: 1px solid red; */
   margin: auto;
   width: 38%;
   padding: 10px;
 }
+
+@media only screen and (max-width: 1000px) {
+  .inp {
+    width: 50px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .center {
+    margin: auto;
+
+    width: 75%;
+  }
+}
+
+@media only screen and (min-width: 1001px) and (max-width: 1600px) {
+  .center {
+    margin: auto;
+
+    width: 43%;
+  }
+}
+
 .center2 {
   margin: 6px 30px;
   width: 80%;
@@ -90,6 +114,12 @@ h3 {
   font: 400 50px/1.3 "Lobster Two", Helvetica, sans-serif;
   font-size: 30px;
   margin-top: 10px;
+}
+
+@media only screen and (max-width: 376px) {
+  .leg1 {
+    margin-left: 15px;
+  }
 }
 
 .sub {
