--- a/src/pages/homepage/Home.scss
+++ b/src/pages/homepage/Home.scss
@@ -34,8 +34,8 @@ nav ul {
 nav ul li {
   display: inline-block;
   color: #7562d5;
-  padding: 0px 15px 0px 15px;
-  font-size: 1em;
+  padding: 25px 15px 0px 15px;
+  font-size: 1.1em;
   font-family: Be Vietnam Pro;
   cursor: pointer;
   font-weight: bold;
@@ -43,11 +43,6 @@ nav ul li {
 
 .nav-list li:hover {
   transform: scale(1.15);
-}
-
-.intro {
-  height: 90vh;
-  position: absolute;
 }
 
 #info {
@@ -62,7 +57,7 @@ nav ul li {
   padding-left: 10%;
   font-family: Be Vietnam Pro;
   color: rgb(22, 13, 71);
-  font-size: 4rem;
+  font-size: 4.5rem;
 }
 
 #info p {
@@ -71,7 +66,7 @@ nav ul li {
   line-height: 1.5em;
   font-family: Be Vietnam Pro;
   color: rgb(85, 82, 94);
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: bold;
 }
 
@@ -82,7 +77,7 @@ nav ul li {
   border: none;
   border-radius: 3px;
   color: white;
-  padding: 20px 35px;
+  padding: 15px 20px;
 }
 
 #info button:hover {
@@ -159,6 +154,92 @@ a:visited,
 a:hover,
 a:active {
   color: inherit;
+}
+
+@media only screen and (min-width: 0px) {
+  #logo {
+    display: none;
+  }
+  nav {
+    justify-content: center;
+  }
+  nav ul {
+    gap: 10px;
+  }
+  nav ul li {
+    padding-left: 0px;
+  }
+
+  .image {
+    display: none;
+  }
+
+  #social {
+    display: none;
+  }
+
+  #onlySmall {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 300px) {
+  nav ul {
+    gap: 30px;
+  }
+  nav ul li {
+    padding-left: 0px;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  #logo {
+    display: block;
+  }
+  nav {
+    justify-content: space-between;
+  }
+  nav ul {
+    gap: 10px;
+  }
+  nav ul li {
+    padding-left: 15px;
+  }
+  .image {
+    display: block;
+  }
+  #social {
+    display: block;
+  }
+  #onlySmall {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #hero {
+    position: relative;
+    display: flex;
+    // justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  #info {
+    position: relative;
+    width: 80%;
+    margin-top: 100px;
+    margin-left: 0%;
+  }
+  #info h1,
+  #info p {
+    padding-left: 0;
+  }
+
+  #info button {
+    margin-left: 0%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
