--- a/src/pages/work/Work.css
+++ b/src/pages/work/Work.css
@@ -1,8 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
 @import url("https://fonts.googleapis.com/css?family=Be+Vietnam+Pro&display=swap");
-
 * {
   box-sizing: border-box;
+}
+
+h2 {
+  margin-top: 25px;
 }
 
 .card-container {
@@ -16,13 +19,27 @@
 }
 
 .card {
-  width: 29%;
   margin: 20px;
   position: relative;
   text-align: center;
   overflow: hidden;
 }
 
+@media only screen and (min-width: 0px) {
+  .card {
+    width: 80%;
+  }
+}
+@media only screen and (min-width: 820px) {
+  .card {
+    width: 43%;
+  }
+}
+@media only screen and (min-width: 1073px) {
+  .card {
+    width: 29%;
+  }
+}
 img {
   width: 100%;
   height: 300px;
