--- a/src/pages/socialSites/SocialSites.module.css
+++ b/src/pages/socialSites/SocialSites.module.css
@@ -12,9 +12,8 @@
 
 @media only screen and (max-width: 600px) {
   .social {
+    position: static;
     flex-direction: row;
-    right: 11vw;
-    bottom: -10vh;
     gap: 20px;
     margin-left: auto;
     margin-right: auto;
