--- a/src/pages/socialSites/SocialSites.module.css
+++ b/src/pages/socialSites/SocialSites.module.css
@@ -10,6 +10,10 @@
   gap: 25px;
 }
 
+.social a:hover {
+  color: rgb(255, 255, 255);
+}
+
 @media only screen and (max-width: 600px) {
   .social {
     position: static;
@@ -17,5 +21,8 @@
     gap: 20px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .social a:hover {
+    color: #7562d5;
   }
 }
