--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Lobster+Two");
+@import url("https://fonts.googleapis.com/css?family=Lobster+Two");
 fieldset {
   border: 2px solid black;
 }
